--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG " />
     <title>LAMPIAS</title>
+
+  
+      <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lcv3L4qAAAAAJoWWTTOuo9SubeanyIoNZ2wPKj5"></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html>
+</html> 
