--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScfqgzc3z4pYYehdJbSmuMT8Gp7abIEiE-zw&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG " />
-    <title>LAMPIAS</title>
+    <title>SIPKL - SMKN 2 KETAPANG</title>
 
   
   
