--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScfqgzc3z4pYYehdJbSmuMT8Gp7abIEiE-zw&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG " />
+    <meta name="description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta name="author" content="SMKN 2 KETAPANG" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="SIPKL - SMKN 2 KETAPANG" />
+    <meta property="og:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta property="og:image" content="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
+    <meta property="og:url" content="https://www.sipkl.smkn2ketapang.sch.id" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SIPKL - SMKN 2 KETAPANG" />
+    <meta name="twitter:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta name="twitter:image" content="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
+    
+    <link rel="icon" type="image/svg+xml" href="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
     <title>SIPKL - SMKN 2 KETAPANG</title>
-
-  
-  
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html> 
+</html>
