add lottie loading

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="SIPKL - SMKN 2 KETAPANG" />
     <meta property="og:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
-    <meta property="og:image" content="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
+    <meta property="og:image" content="https://e-library.smkn2ketapang.sch.id/static/media/icon-login.6c41b2b908d2a42cee4d.png" />
     <meta property="og:url" content="https://www.sipkl.smkn2ketapang.sch.id" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SIPKL - SMKN 2 KETAPANG" />
     <meta name="twitter:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
-    <meta name="twitter:image" content="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
+    <meta name="twitter:image" content="https://e-library.smkn2ketapang.sch.id/static/media/icon-login.6c41b2b908d2a42cee4d.png" />
     
-    <link rel="icon" type="image/svg+xml" href="https://uploads.mgentaarya.my.id/storage-documents/Screenshot_2025-01-16_075511-removebg-preview.png" />
+    <link rel="icon" type="image/svg+xml" href="https://e-library.smkn2ketapang.sch.id/static/media/icon-login.6c41b2b908d2a42cee4d.png" />
     <title>SIPKL - SMKN 2 KETAPANG</title>
   </head>
   <body>
