--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:image" content="/icon.png" />
     
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
-    <title>SIPKL - SMKN Negeri 2 KETAPANG</title>
+    <title>SIPKL | SMKN Negeri 2 KETAPANG</title>
   </head>
   <body>
     <div id="root"></div>
