add lottie loading

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
     <meta name="author" content="SMKN 2 KETAPANG" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="SIPKL - SMKN Negeri 2 KETAPANG" />
+    <meta property="og:title" content="SIPKL - SMK Negeri 2 KETAPANG" />
     <meta property="og:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
     <meta property="og:image" content="/icon.png" />
     <meta property="og:url" content="https://www.sipkl.smkn2ketapang.sch.id" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="SIPKL | SMKN Negeri 2 KETAPANG" />
+    <meta name="twitter:title" content="SIPKL | SMK Negeri 2 KETAPANG" />
     <meta name="twitter:description" content="Aplikasi Web Layanan Manajemen Praktek Kerja Lapangan Siswa SMKN 2 KETAPANG" />
     <meta name="twitter:image" content="/icon.png" />
     
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
-    <title>SIPKL | SMKN Negeri 2 KETAPANG</title>
+    <title>SIPKL | SMK Negeri 2 KETAPANG</title>
   </head>
   <body>
     <div id="root"></div>
