--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html class="notranslate" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta
+      name="description"
+      content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG"
+    />
     <meta name="author" content="SMKN 2 KETAPANG" />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="DIGITAL | SMK Negeri 2 KETAPANG" />
-    <meta property="og:description" content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta
+      property="og:description"
+      content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG"
+    />
     <meta property="og:image" content="/icon.png" />
     <meta property="og:url" content="https://digital.smkn2ketapang.sch.id" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DIGITAL | SMK Negeri 2 KETAPANG" />
-    <meta name="twitter:description" content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG" />
+    <meta
+      name="twitter:description"
+      content="Aplikasi Web Layanan Digitalisasi Informasi Praktik Kerja Lapangan Siswa SMKN 2 KETAPANG"
+    />
     <meta name="twitter:image" content="/icon.png" />
-    
+
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <title>DIGITAL | SMK Negeri 2 KETAPANG</title>
   </head>
